hard-gists/cb2b90523c592abe7ae4/run.log
=== Docker Run Log for cb2b90523c592abe7ae4 ===
Started at: Mi 29. Okt 20:17:10 CET 2025

[2025-10-29 20:17:11] START: Running container for cb2b90523c592abe7ae4
[2025-10-29 20:17:11] SUCCESS: Container 3172eb8abb71b9f6e59e72e75a39a4643f3eda9b673ce1651768cbdf11477bb1 started for cb2b90523c592abe7ae4
=== Container logs for cb2b90523c592abe7ae4 ===
  File "/snippet.py", line 70
    print "Found pre-registered! dcid %s, entry_date %s" % (row.dcid, entry_date, )
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cb2b90523c592abe7ae4 ===
[2025-10-29 20:17:13] INFO: Container 3172eb8abb71b9f6e59e72e75a39a4643f3eda9b673ce1651768cbdf11477bb1 has stopped
